test/cli/test/validating-admission-policies/disallow-host-path/kyverno-test.yaml
name: disallow-host-path-test
policies:
- disallow-host-path.yaml
resources:
- deployments.yaml
results:
- isValidatingAdmissionPolicy: true
  kind: Deployment
  policy: disallow-host-path
  resources:
  - deployment-pass
  result: pass
- isValidatingAdmissionPolicy: true
  kind: Deployment
  policy: disallow-host-path
  resources:
  - deployment-fail
  result: fail
